--- a/README
+++ b/README
@@ -1,3 +1,23 @@
+Lab 5 (xv6 Networking Bonus)
+--Sam Jijina
+
+Changelog:
+1) Netowrking abaility was added to xv6 with E1000 NIC.
+2) xv6 can use ARP
+
+Instructions:
+1) Run make clean && make
+2) Run make qemu-nox-serv in Temrinal 1.
+3) Run make qemu-nox in Terminal 2.
+4) Run arpserv in Terminal 1.
+5) Run arptest in Terminal 2.
+6) Inspect quemu.pcap file using tcpdump or Wireshark.
+
+Please note, answers to the questions in the lab can be found in answers.txt.
+
+
+
+--------------------------------------
 xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
 Version 6 (v6).  xv6 loosely follows the structure and style of v6,
 but is implemented for a modern x86-based multiprocessor using ANSI C.
